fix: getFirst(), getLast() error and pom.xml mismatch version